# en.UTF-8

0.3.0
^Everything is ready to try newer ruby versions! Well, missing some "rubyfill.h" and fixing RGSS2...

0.2.7
^Reworked Table code, plus made another relational stuff for it.
^Some Bitmap fixes and yet another data base to avoid ruby calls.
^Moved Plane, Sprite, Tilemap and Window structures from headers to source files, to signalize that they are "ending points" and not "freesbees" like Bitmap, Color, Font, Rect, and Tone.
^Solved two bugs regarding Window, never use VALUE for checking again as it will invoke catastrophes.

0.2.6
^Lots of testing later, Viewport seems correct now. It always changes values, the right way is by pointer, but to do it correctly we have to give up the ruby way.
^Rect and priorities are still way off, it will take some time to build every other class the way Viewport was done.
^The resolution is not correct now that Viewport is always applied on RenderScreen.

0.2.5
^Window should be ready enough for unification, missing shader strings that will probably go the easy way out...
^The "vsh_source", used to initialize shaders everywhere, is actually the same string.

0.2.4
^Cleaned up more settings, to avoid resets.
^Trashed RenderViewport, viewport values are more correct but there is still a way to go...
^Only the most complicated parts remain for the unification (Tilemap, Window, wild guesses).

0.2.3
^Reverted the pixel color stuff, it must be kept pumping color like crazy, another management is needed...
^Only sets VALUEs from structures when they are different, it will avoid AT LEAST resets into tilemaps for no good reason.
^Viewport is not a renderable anymore, as it was logical from the very beginning. They will get corrected some day.

0.2.2
^This is now main again, with the job fixed. Now on to figure why the pixel color blows...

0.2.1
^Dirty cleanup for debugging something else...
^The Bitmap type now has their proper Rect, it was allocating like mad without reason. The font one will come later.

0.2.0